<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password_label">Enter Password</string>
    <string name="login_label">Login</string>
    <string name="logging_in">Login</string>
    <string name="new_login">New Login</string>
    <string name="welcome_label">Welcome To Shoe Store</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_list">Shoe List</string>
    <string name="navigate_to_shoe_details">Navigate to Shoe Details</string>
    <string name="logout">Logout</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company_name">Company Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="shoe_details">Shoe Details</string>
    <style name="double_quotes">/"%d/"</style>
</resources>
